// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recruitment service [GET] /recruitments Should return list of user's recruitments 1`] = `
{
  "createdAt": Any<String>,
  "id": Any<String>,
  "jobOffer": {
    "company": {
      "name": "Google",
    },
    "createdAt": Any<String>,
    "employmentType": "b2b",
    "level": "senior",
    "position": "Senior Web Developer",
    "salaryCurrency": "pln",
    "salaryFrom": 25000,
    "salaryTo": 30000,
    "workType": "full_time",
  },
  "open": true,
}
`;

exports[`Recruitment service [GET] /recruitments/:id Should return recruitment 1`] = `
{
  "application": {
    "createdAt": Any<String>,
    "cv": null,
    "introduction": "Hello Google, I want to work for you",
    "jobOffer": {
      "company": {
        "avatarUrl": null,
        "backgroundUrl": null,
        "description": null,
        "name": "Google",
        "phoneNumber": "222 222 2222",
      },
      "createdAt": Any<String>,
      "description": "",
      "employmentType": "b2b",
      "jobOfferSkills": [],
      "jobOfferTechnologies": [],
      "level": "senior",
      "position": "Senior Web Developer",
      "salaryCurrency": "pln",
      "salaryFrom": 25000,
      "salaryTo": 30000,
      "workType": "full_time",
    },
    "user": {
      "avatar": null,
      "email": "jon.snow@gmail.com",
      "firstName": "Jon",
      "lastName": "Snow",
      "username": null,
    },
  },
  "chat": {
    "chatUsers": [
      {
        "chatId": "49cdffc1-7d82-49f6-a344-e1ee509f32aa",
        "user": {
          "avatar": null,
          "firstName": "Adam",
          "id": "5be58ac3-f7aa-493c-b0c4-3dd57981145e",
          "lastName": "Joseph",
          "username": null,
        },
        "userId": "5be58ac3-f7aa-493c-b0c4-3dd57981145e",
      },
      {
        "chatId": "49cdffc1-7d82-49f6-a344-e1ee509f32aa",
        "user": {
          "avatar": null,
          "firstName": "Jon",
          "id": "611bfc24-1a73-4e0b-bb5b-46544cc8e388",
          "lastName": "Snow",
          "username": null,
        },
        "userId": "611bfc24-1a73-4e0b-bb5b-46544cc8e388",
      },
    ],
    "id": "49cdffc1-7d82-49f6-a344-e1ee509f32aa",
  },
  "createdAt": "2024-05-05T10:48:13.045Z",
  "id": Any<String>,
  "open": true,
}
`;
